Pyro and PLI modules have been basically implemented, but the measure and sampling modules are yet to be completed.
1. The basic workflow of the Pyro algorithm has been largely refined. The completeness of the process was tested using simple data and measure. After adding the escape process, the algorithm can now fully traverse all nodes. However, specific details for the ascend and trickle_down phases still require further refinement, such as whether the launchpad node should be directly verified before ascend?

2. The foundational Trie class has been implemented and applied across various stages of the algorithm. PLI and Cache (based on Trie) have been implemented, along with operations like intersection calculation and random caching.

3. BitSet-related calculation methods have been implemented, including the computation of the minimal hitting set (strictly following the method described in the paper), which is now applied in the escape phase. Further work is needed to revisit the trickle-down phase in the paper and apply the minimal hitting set to this stage?

4. A basic function timer module has been implemented to track function execution time. The slf4j+logback logging module has been introduced to record detailed runtime information, facilitating future observation of function execution processes.

1. 基本完善了Pyro算法的具体流程，使用简单数据和简单度量测试了流程的完备性，添加了escape流程后，算法可以完整地遍历所有节点了。但上升和下降的具体细节仍需完善，如：上升时lauchpad节点是否应该直接验？
2. 实现了基础类Trie，并在算法的各个流程中应用。实现了PLI与Cache（基于Trie），并实现了计算交集、随机缓存等操作。
3. 实现了BitSet的相关计算方法，包括最小命中集的计算（严格按照论文中的方法计算），并应用于escape阶段。后续需要重新理解论文中的trickledown阶段并将最小命中集应用于该阶段？
4. 简单地实现了函数计时器模块，统计函数使用的时间，引入slf4j+logback日志模块，记录函数的运行细节，方便后续观察函数运行过程。